--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xhr",
-  "version": "0.0.1",
+  "name": "lt-xhr",
+  "version": "1.0.0",
   "main": "dist/main.js",
   "scripts": {
     "start": "npm run server:dev",
@@ -11,11 +11,12 @@
     "build:dev": "webpack --config ./webpack.config.js --progress --profile --color --display-error-details --display-cached",
     "build:prod": "rm -rf ./dist &&cross-env NODE_ENV=production webpack --config ./webpack.config.js  --progress --profile --color --display-error-details --display-cached --bail",
     "clean": "npm cache clear && rimraf -- dist",
-    "test": "karma start"
+    "test": "jest"
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/jasmine": "^2.5.53",
+    "@types/jest": "^23.0.0",
+    "@types/lru-cache": "^4.1.1",
     "@types/node": "^10.3.2",
     "awesome-typescript-loader": "^3.2.1",
     "cross-env": "^5.0.1",
@@ -25,15 +26,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.6.0",
-    "jasmine-core": "^2.6.4",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.4",
+    "jest": "^23.1.0",
     "rimraf": "^2.6.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
@@ -45,8 +38,8 @@
     "webpack-dev-server": "2.5.1"
   },
   "dependencies": {
-    "@types/lru-cache": "^4.1.1",
     "axios": "^0.18.0",
-    "lru-cache": "^4.1.3"
+    "lru-cache": "^4.1.3",
+    "ts-jest": "^22.4.6"
   }
 }
