--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "homepage": "https://github.com/ltinyho/lt-xhr",
   "license": "MIT",
   "dependencies": {
+    "@types/lru-cache": "^4.1.1",
+    "@types/qs": "^6.5.1",
     "axios": "^0.18.0",
     "lru-cache": "^4.1.3",
-    "@types/lru-cache": "^4.1.1"
+    "qs": "^6.5.2"
   },
   "devDependencies": {
     "@types/jest": "^23.0.0",
